# color_value_finder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: release.yml
_codeql_build_dir/: Makefile
releases/v0.1.2/: BUILD_INSTRUCTIONS.md  CHANGELOG.md
releases/v0.1.2/linux/: README.md
releases/v0.1.2/mac/: ColorValueFinder  README.md
releases/v0.1.2/win/: README.md
src/: ColorConverter.cpp  ColorConverter.h  PlatformUtils.cpp  PlatformUtils.h  PlatformUtils_mac.mm  main.cpp
